--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -39,7 +39,7 @@ li {
     list-style-type: none;
 }
 
-/* Base styles */
+/* Base + Font styles */
 body {
     font-size: 16px;
     font-family: var(--font-stack);
@@ -48,8 +48,26 @@ body {
     background-image: url(../images/bg-intro-desktop.png);
 }
 
-/* Font styles */
-/* -------------------- */
+    /* Header styles */
+header h1 {
+    color: white;
+
+    text-align: center;
+    font-size: 1.5rem;
+
+    margin: 0;
+}
+
+header p {
+    color: white;
+
+    text-align: center;
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+
+    margin: 2.5rem;
+}
+
 /*
     - Small mobile - 320px
     - Medium mobile - 375px
