--- a/stylesheets/styles-small.css
+++ b/stylesheets/styles-small.css
@@ -1,4 +1,76 @@
 /* Small tablet styles -- The width of the screen is at least 620px */
-@media screen and (min-width: 620px){
+@media screen and (min-width: 920px){
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 3rem;
+        
+        overflow: auto;
+    }
+
+    body {
+        height: 100vh;
+    }
     
+    #container {
+        width: 80%;
+        /* height: 80%; */
+    
+        min-width: 310px;
+        max-width: 1300px;
+    
+        margin: 0 auto;
+    }
+
+    header {
+        grid-column: 1 / 3;
+        align-self: center;
+    }
+
+    main {
+        grid-column: 3 / -1;
+    }
+
+    main #form-container {
+        box-shadow: 
+        0 5px 0 rgba(255, 122, 122, 0.8),
+        0 5px 0 rgba(0, 0, 0, 1);
+    }
+    
+
+    header h1 {
+        color: white;
+    
+        text-align: left;
+        font-size: 3.5rem;
+    
+        margin: 0;
+    }
+    
+header p {
+    color: white;
+
+    text-align: left;
+    font-size: 1.2rem;
+    line-height: 2rem;
+
+    margin: 2.5rem 0 0 0;
+}
+
+main p {
+    color: white;
+    text-align: center;
+    line-height: 2rem;
+
+    background-color: var(--accent-1);
+    box-shadow:
+    0 5px 0 rgba(96, 85, 165, 0.8),
+    0 5px 0 rgba(0, 0, 0, 1);
+
+    /* border-radius: 0.3rem; */
+    
+    margin-top: 0;
+    /* margin-bottom: 1.5rem; */
+    padding: 1.5rem 3.5rem;
+}
 }
